# puuu

infra/enviroments/production/: main.tf  settings.tf  terraform.tfvars  variables.tf
infra/enviroments/production/terraform-state/: main.tf  terraform.tfstate  terraform.tfstate.backup
infra/enviroments/production_setup/: main.tf  settings.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars
infra/enviroments/test/: settings.tf  terraform.tfvars
infra/enviroments/test/terraform-state/: main.tf  terraform.tfstate.backup  terraform.tfvars
infra/enviroments/test_setup/: main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
infra/modules/cert/: acm.tf  outputs.tf  settings.tf  variables.tf
infra/modules/dns/: data.tf  outputs.tf
infra/modules/frontend/: cloudfront.tf  route53.tf  s3.tf  settings.tf  variables.tf  waf.tf
infra/modules/frontend/src/: basicauth.js
infra/modules/iam-account/: main.tf
infra/modules/iam-devops/: data.tf
infra/modules/network/: internet_gateway.tf  outputs.tf  route_table.tf  subnet.tf  variables.tf  vpc.tf
infra/modules/network/nat_gateway/: main.tf
infra/modules/terraform-state/: dynamodb-lock.tf  s3-state.tf  variables.tf
setup/: ansible.cfg  ctl  install_ansible.sh
setup/playbooks/: main.yml
setup/playbooks/roles/asdf/tasks/: main.yml
setup/playbooks/roles/awscli/tasks/: main.yml
setup/playbooks/roles/commons/tasks/: dev_packages.yml  main.yml
setup/playbooks/roles/git/tasks/: main.yml  (+2 more)
tools/dialogplay-log-analysis/: .gitignore  ctl  log_analysis.ipynb  poetry.toml  pyproject.toml
(+7 files in other folders)
